--- a/src/protected/application/themes/JoaoPessoa/assets/css/sass/_overrides.scss
+++ b/src/protected/application/themes/JoaoPessoa/assets/css/sass/_overrides.scss
@@ -3,3 +3,7 @@
         width: 77px;
     }
 }
+
+#main-header #busca{
+    z-index:1666;
+}
